add jvmFlags for java9 module